# study_app

app/: package-lock.json
app/src/: App.js
app/src/Components/: AddButton.js  Note.js  NoteList.js
backend/: README.md  db.py  notes.db  pyproject.toml
backend/src/: summary.py  youtube_transcription.py
frontend/: package-lock.json  package.json
frontend/views/: index.pug
